--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ nav ul{
     margin: 0px 6px;
 }
 nav ul li a{
+    background-color: #E33741;
     color: #fff;
     padding: 10px;
     text-transform: uppercase;
@@ -121,4 +122,26 @@ nav ul li a:hover, a.active{
 .amount{
     display: flex;
     justify-content: space-between;
+}
+#conformation-section
+{
+    display: none;
+}
+#conformation-section p
+{
+    font-size: 2em;
+    margin: 0;
+}
+#conformation-section button
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#conformation-section img
+{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
 }
