--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ nav{
     height: 50px;
     width: 100%;
     padding: 20px 0;
+    
 }
 .container{
     width: 1200px;
@@ -34,6 +35,7 @@ nav ul li a{
     padding: 10px;
     text-transform: uppercase;
     margin-left: 30px;
+    text-decoration: none;
 }
 nav ul li a:hover, a.active{
     background-color: #E33741;
